--- a/tutorial_2/tutorial_2.ipynb
+++ b/tutorial_2/tutorial_2.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1vSU3w-tVTHgtgoiBas8Knp14C6BT9IRD' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=FILEID\" -O election-day.pickle && rm -rf /tmp/cookies.txt\n",
-    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1dsWKYNNuLko4fNuekXi1y384xNYcu5Xt' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=FILEID\" -O election-day-retweet.pickle && rm -rf /tmp/cookies.txt"
+    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1vSU3w-tVTHgtgoiBas8Knp14C6BT9IRD' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1vSU3w-tVTHgtgoiBas8Knp14C6BT9IRD\" -O tutorial_2/election-day.pickle && rm -rf /tmp/cookies.txt\n",
+    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1dsWKYNNuLko4fNuekXi1y384xNYcu5Xt' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1dsWKYNNuLko4fNuekXi1y384xNYcu5Xt\" -O tutorial_2/election-day-retweet.pickle && rm -rf /tmp/cookies.txt"
    ]
   },
   {
