changing dataset used in twitter tutorial 2

--- a/tutorial_2/tutorial_2.ipynb
+++ b/tutorial_2/tutorial_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +20,10 @@
     "import networkx as nx\n",
     "import wget\n",
     "\n",
-    "TWEET_PICKLE = \"election-day.pickle\"\n",
-    "FILTER_TWEETS = False\n",
+    "TWEET_JSON = \"democratic-party-timelines.json\"\n",
     "\n",
-    "RETWEET_G_PICKLE = \"election-day-retweet.pickle\"\n",
-    "CREATE_GRAPH = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1vSU3w-tVTHgtgoiBas8Knp14C6BT9IRD' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1vSU3w-tVTHgtgoiBas8Knp14C6BT9IRD\" -O tutorial_2/election-day.pickle && rm -rf /tmp/cookies.txt\n",
-    "#wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1dsWKYNNuLko4fNuekXi1y384xNYcu5Xt' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1dsWKYNNuLko4fNuekXi1y384xNYcu5Xt\" -O tutorial_2/election-day-retweet.pickle && rm -rf /tmp/cookies.txt"
+    "FILTER_TWEETS = True\n",
+    "CREATE_GRAPH = True"
    ]
   },
   {
@@ -43,53 +32,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class clean_tweet: \n",
+    "    def __init__(self, tweet): \n",
+    "        self.id = tweet['id']\n",
+    "        self.user = tweet['user']['name']\n",
+    "        self.text = tweet['full_text']\n",
+    "        if 'retweeted_status' in tweet:\n",
+    "            rt = tweet['retweeted_status']\n",
+    "            self.is_rt = True\n",
+    "            self.rt_text = rt['full_text']\n",
+    "            self.rt_user = rt['user']['name']\n",
+    "            self.rt_id = rt['id']\n",
+    "        else: \n",
+    "            self.is_rt = False\n",
+    "            \n",
     "if FILTER_TWEETS: \n",
     "    data = []\n",
-    "    with open('election-day.txt') as f:\n",
+    "    with open(TWEET_JSON) as f:\n",
     "        for line in f:\n",
     "            json_line = json.loads(line)\n",
     "            data.append(json_line)\n",
-    "\n",
-    "    class clean_tweet: \n",
-    "        def __init__(self, tweet): \n",
-    "            self.id = tweet['id']\n",
-    "            self.user = tweet['user']['name']\n",
-    "            self.text = tweet['full_text']\n",
-    "            if 'retweeted_status' in tweet:\n",
-    "                rt = tweet['retweeted_status']\n",
-    "                self.is_rt = True\n",
-    "                self.rt_text = rt['full_text']\n",
-    "                self.rt_user = rt['user']['name']\n",
-    "                self.rt_id = rt['id']\n",
-    "            else: \n",
-    "                self.is_rt = False\n",
     "\n",
     "    filtered_data = []\n",
     "    for elem in data: \n",
     "        filtered_tweet = clean_tweet(elem)\n",
     "        filtered_data.append(filtered_tweet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if FILTER_TWEETS:\n",
-    "    with open (TWEET_PICKLE, \"wb\") as file: \n",
-    "        pickle.dump(filtered_data, file)\n",
-    "        print (\"wrote Twitter file to pickle file\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open (TWEET_PICKLE, \"rb\") as file:\n",
-    "    filtered_data = pickle.load(file)"
    ]
   },
   {
@@ -127,29 +94,6 @@
     "            G.add_node(elem.rt_user)\n",
     "            G.add_edge(elem.user, elem.rt_user)\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if CREATE_GRAPH: \n",
-    "    with open (RETWEET_G_PICKLE, \"wb\") as file: \n",
-    "        pickle.dump(G, file)\n",
-    "        print (\"wrote Twitter graph to pickle file\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open (RETWEET_G_PICKLE, \"rb\") as file:\n",
-    "    G = pickle.load(file)\n",
-    "    print (\"loaded Twitter retweet graph\")"
    ]
   },
   {
