minor adjustments to prints

--- a/tutorial_web_scraping/tutorial_web_scraping.ipynb
+++ b/tutorial_web_scraping/tutorial_web_scraping.ipynb
@@ -115,6 +115,7 @@
     "                    \n",
     "            # if we want to download this file, download and write city name to file\n",
     "            if to_download:\n",
+    "                print (\"download this city's data\")\n",
     "                # make directory for state\n",
     "                os.makedirs(OPP_DATA_ROOT+state_name, exist_ok = True)\n",
     "                \n",
@@ -124,7 +125,10 @@
     "                    time.sleep(10)\n",
     "                except: \n",
     "                    print (\"couldn't download the file \", city_csv_url[0])\n",
-    "                dl_city_list.write(state_name + \"_\" + city_name + \"\\n\")"
+    "                dl_city_list.write(state_name + \"_\" + city_name + \"\\n\")\n",
+    "            else: \n",
+    "                print (\"not downloading this city's data\")\n",
+    "            print (\"--\")"
    ]
   },
   {
