changing twitter object from class to dictionary

--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -35,25 +35,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create our tweet object that filters out all the information we are not interested in\n",
+    "# create our tweet dictionary that filters out all the information we are not interested in\n",
     "# a clean tweet object extracts and contains the following attributes from the raw tweet: \n",
     "# the original tweet's : id, user, text\n",
     "# if the tweet is a retweet, our object also contains the retweet's: rt_text, rt_user, rt_id\n",
     "# along with a boolean value is_rt that indicates whether the current tweet is a retweet. \n",
-    "class clean_tweet: \n",
-    "    def __init__(self, tweet): \n",
-    "        self.id = tweet['id']\n",
-    "        self.user = tweet['user']['screen_name']\n",
-    "        self.text = tweet['full_text']\n",
-    "        if 'retweeted_status' in tweet:\n",
-    "            rt = tweet['retweeted_status']\n",
-    "            self.is_rt = True\n",
-    "            self.rt_text = rt['full_text']\n",
-    "            self.rt_user = rt['user']['screen_name']\n",
-    "            self.rt_id = rt['id']\n",
-    "        else: \n",
-    "            self.is_rt = False\n",
     "\n",
+    "def clean_tweet(tweet): \n",
+    "    filtered_tweet = {\n",
+    "        \"id\" : tweet['id'], \n",
+    "        \"user\" : tweet['user']['screen_name'], \n",
+    "        \"text\" : tweet['full_text'], \n",
+    "    }\n",
+    "    if 'retweeted_status' in tweet:\n",
+    "        rt = tweet['retweeted_status']\n",
+    "        filtered_tweet[\"is_rt\"] = True\n",
+    "        filtered_tweet[\"rt_text\"] = rt['full_text']\n",
+    "        filtered_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
+    "        filtered_tweet[\"rt_id\"] = rt['id']\n",
+    "    else: \n",
+    "        filtered_tweet[\"is_rt\"] = False\n",
+    "            \n",
+    "    return filtered_tweet\n",
+    "            \n",
     "# load the raw tweets into a list\n",
     "data = []\n",
     "with open(TWEET_JSON) as f:\n",
@@ -86,11 +90,10 @@
    "outputs": [],
    "source": [
     "# printing the first element of the filtered data\n",
-    "# .__dict__ allows us to see the contents of the object\n",
-    "print(filtered_data[0].__dict__)\n",
+    "print(filtered_data[0])\n",
     "print (\"---\")\n",
     "# printing an example of a retweet objecft\n",
-    "print(filtered_data[1].__dict__)\n"
+    "print(filtered_data[1])\n"
    ]
   },
   {
@@ -114,16 +117,16 @@
     "\n",
     "for elem in filtered_data: \n",
     "    # for each tweet, we add the tweet's user to the graph\n",
-    "    G.add_node(elem.user)\n",
-    "    print (elem.user)\n",
+    "    G.add_node(elem[\"user\"])\n",
+    "    print (elem[\"user\"])\n",
     "\n",
     "    # if this tweet is a retweet, we add the original tweet's user to the graph\n",
     "    # and create an edge between the current user and the original tweet's user\n",
     "    # current user -> original tweet's user\n",
-    "    if elem.is_rt: \n",
-    "        G.add_node(elem.rt_user)\n",
-    "        print (elem.rt_user)\n",
-    "        G.add_edge(elem.user, elem.rt_user)\n",
+    "    if elem[\"is_rt\"]: \n",
+    "        G.add_node(elem[\"rt_user\"])\n",
+    "        print (elem[\"rt_user\"])\n",
+    "        G.add_edge(elem[\"user\"], elem[\"rt_user\"])\n",
     "    print (\"--\")"
    ]
   },
