renaming vairable in function and adding in example to print unfiltered data

--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -42,33 +42,33 @@
     "# along with a boolean value is_rt that indicates whether the current tweet is a retweet. \n",
     "\n",
     "def clean_tweet(tweet): \n",
-    "    filtered_tweet = {\n",
+    "    processed_tweet = {\n",
     "        \"id\" : tweet['id'], \n",
     "        \"user\" : tweet['user']['screen_name'], \n",
     "        \"text\" : tweet['full_text'], \n",
     "    }\n",
     "    if 'retweeted_status' in tweet:\n",
     "        rt = tweet['retweeted_status']\n",
-    "        filtered_tweet[\"is_rt\"] = True\n",
-    "        filtered_tweet[\"rt_text\"] = rt['full_text']\n",
-    "        filtered_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
-    "        filtered_tweet[\"rt_id\"] = rt['id']\n",
+    "        processed_tweet[\"is_rt\"] = True\n",
+    "        processed_tweet[\"rt_text\"] = rt['full_text']\n",
+    "        processed_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
+    "        processed_tweet[\"rt_id\"] = rt['id']\n",
     "    else: \n",
-    "        filtered_tweet[\"is_rt\"] = False\n",
+    "        processed_tweet[\"is_rt\"] = False\n",
     "            \n",
-    "    return filtered_tweet\n",
+    "    return processed_tweet\n",
     "            \n",
     "# load the raw tweets into a list\n",
-    "data = []\n",
+    "tweet_data = []\n",
     "with open(TWEET_JSON) as f:\n",
     "    for line in f:\n",
     "        json_line = json.loads(line)\n",
-    "        data.append(json_line)\n",
+    "        tweet_data.append(json_line)\n",
     "\n",
     "# filter all of the raw tweets by turning them into clean_tweet objects\n",
     "# the filtering is taken care of in the class function\n",
     "filtered_data = []\n",
-    "for elem in data: \n",
+    "for elem in tweet_data: \n",
     "    filtered_tweet = clean_tweet(elem)\n",
     "    filtered_data.append(filtered_tweet)"
    ]
@@ -89,10 +89,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# printing the first element of the unfiltered data as an example\n",
+    "print(tweet_data[0])\n",
+    "print (\"---\")\n",
+    "# printing an example of a retweet object as an example\n",
+    "print(tweet_data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# printing the first element of the filtered data\n",
     "print(filtered_data[0])\n",
     "print (\"---\")\n",
-    "# printing an example of a retweet objecft\n",
+    "# printing an example of a retweet object\n",
     "print(filtered_data[1])\n"
    ]
   },
@@ -165,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Below is code to visualize the graph. Treat as blackbox for now!\n",
     "import chart_studio.plotly  as py\n",
     "from plotly.graph_objs import *\n",
     "\n",
