--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -90,10 +90,10 @@
    "outputs": [],
    "source": [
     "# printing the first element of the unfiltered data as an example\n",
-    "print(data[0])\n",
+    "print(tweet_data[0])\n",
     "print (\"---\")\n",
     "# printing an example of a retweet object as an example\n",
-    "print(data[1])"
+    "print(tweet_data[1])"
    ]
   },
   {
