--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -10,6 +10,10 @@
     "\n",
     "We'll be using a Twitter data set that George Washington University published that tracks the tweets that Democratic Party accounts tweeted. Note that public Twitter data sets that you will find will only contain the Tweet IDs (as per Twitter's policy), so you will have to \"rehydrate\" each tweet by using the Twitter API to request the full text. \n",
     "\n",
+    "We provide two ways of visualizing the graph itself - one through iGraph and the other by exporting the networkx generated network into a Gephi file (note that the extension is deprecated by Gephi but is what networkx supports and still works).  \n",
+    "\n",
+    "https://gephi.org/\n",
+    "\n",
     "Littman, Justin; Wrubel, Laura; Kerchner, Daniel, 2016, \"democratic-party-timelines.txt\", 2016 United States Presidential Election Tweet Ids, https://doi.org/10.7910/DVN/PDI7IN/TXWMVP, Harvard Dataverse, V3\n"
    ]
   },
@@ -161,6 +165,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# writing our graph to a Gephi file format\n",
+    "nx.write_gexf(G, \"democratic-party-timelines.gexf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Visualizing our retweet network\n",
     "# This code was borrowed from the Plotly documentation\n",
     "# https://plot.ly/python/v3/igraph-networkx-comparison/\n",
@@ -264,18 +278,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
