fix for writing tweets to json

--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
@@ -202,7 +202,7 @@
     "    def on_status(self, status):\n",
     "        print(status._json)\n",
     "        with open (\"housedemocrats_stream.json\", \"a+\") as stream_f:\n",
-    "            json_text = json.dumps(tweet._json)\n",
+    "            json_text = json.dumps(status._json)\n",
     "            stream_f.write(json_text)\n",
     "            stream_f.write('\\n')\n",
     "            \n",
