adding in per tweet vader sentiment

--- a/tutorial_nlp/tutorial_nlp.ipynb
+++ b/tutorial_nlp/tutorial_nlp.ipynb
@@ -346,6 +346,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for elem in stripped_tweet_text:\n",
+    "    print (elem)\n",
+    "    print (analyser.polarity_scores(elem))\n",
+    "    print (\"----\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
