updating twitter retweet tutorials for covid

--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -8,13 +8,11 @@
     "\n",
     "In this tutorial, we will be creating a Twitter retweet network from a set of tweets. \n",
     "\n",
-    "We'll be using a Twitter data set that George Washington University published that tracks the tweets that Democratic Party accounts tweeted. Note that public Twitter data sets that you will find will only contain the Tweet IDs (as per Twitter's policy), so you will have to \"rehydrate\" each tweet by using the Twitter API to request the full text. \n",
+    "Note that public Twitter data sets that you will find will only contain the Tweet IDs (as per Twitter's policy), so you will have to \"rehydrate\" each tweet by using the Twitter API to request the full text. \n",
     "\n",
     "We provide two ways of visualizing the graph itself - one through iGraph and the other by exporting the networkx generated network into a Gephi file (note that the extension is deprecated by Gephi but is what networkx supports and still works).  \n",
     "\n",
-    "https://gephi.org/\n",
-    "\n",
-    "Littman, Justin; Wrubel, Laura; Kerchner, Daniel, 2016, \"democratic-party-timelines.txt\", 2016 United States Presidential Election Tweet Ids, https://doi.org/10.7910/DVN/PDI7IN/TXWMVP, Harvard Dataverse, V3\n"
+    "https://gephi.org/\n"
    ]
   },
   {
@@ -30,7 +28,7 @@
     "import igraph as ig\n",
     "\n",
     "# Save the location of the Tweet JSON file\n",
-    "TWEET_JSON = \"democratic-party-timelines.json\""
+    "TWEET_JSON = \"covid.json\""
    ]
   },
   {
@@ -41,7 +39,7 @@
    "source": [
     "# create our tweet dictionary that filters out all the information we are not interested in\n",
     "# a clean tweet object extracts and contains the following attributes from the raw tweet: \n",
-    "# the original tweet's : id, user, text\n",
+    "# the original tweet's : id, user, text, created at\n",
     "# if the tweet is a retweet, our object also contains the retweet's: rt_text, rt_user, rt_id\n",
     "# along with a boolean value is_rt that indicates whether the current tweet is a retweet. \n",
     "\n",
@@ -49,14 +47,22 @@
     "    processed_tweet = {\n",
     "        \"id\" : tweet['id'], \n",
     "        \"user\" : tweet['user']['screen_name'], \n",
-    "        \"text\" : tweet['full_text'], \n",
+    "        \"created_at\" : tweet['created_at']\n",
     "    }\n",
+    "    if \"full_text\" in tweet: \n",
+    "        processed_tweet[\"text\"] = tweet['full_text']\n",
+    "    elif \"text\" in tweet: \n",
+    "        processed_tweet[\"text\"] = tweet['text']\n",
+    "        \n",
     "    if 'retweeted_status' in tweet:\n",
     "        rt = tweet['retweeted_status']\n",
     "        processed_tweet[\"is_rt\"] = True\n",
-    "        processed_tweet[\"rt_text\"] = rt['full_text']\n",
     "        processed_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
-    "        processed_tweet[\"rt_id\"] = rt['id']\n",
+    "        processed_tweet[\"rt_id\"] = rt['id']        \n",
+    "        if \"full_text\" in rt:\n",
+    "            processed_tweet[\"rt_text\"] = rt['full_text']\n",
+    "        elif \"text\" in rt: \n",
+    "            processed_tweet[\"rt_text\"] = rt['text']\n",
     "    else: \n",
     "        processed_tweet[\"is_rt\"] = False\n",
     "            \n",
@@ -166,7 +172,7 @@
    "outputs": [],
    "source": [
     "# writing our graph to a Gephi file format\n",
-    "nx.write_gexf(G, \"democratic-party-timelines.gexf\")"
+    "nx.write_gexf(G, \"covid.gexf\")"
    ]
   },
   {
@@ -183,7 +189,7 @@
     "labels=list(G2.vs['name'])\n",
     "N = len(labels)\n",
     "E = [e.tuple for e in G2.es]\n",
-    "layt=G2.layout('kk') #kamada-kawai layout"
+    "layt=G2.layout('fr') #Fruchterman-Reingold force-directed layout"
    ]
   },
   {
@@ -285,6 +291,27 @@
    "source": [
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
