--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this tutorial, we will be creating a Twitter retweet network from a set of tweets. \n",
     "\n",
-    "We'll be using a Twitter data set that George Washington University published that tracks the tweets that Democratic Party accounts tweeted. Note that public Twitter data sets that you will find will only contain the Tweet IDs (as per Twitter's policy), so you will have to \"rehydrate\" each tweet by using the Twitter API to request the full text. \n",
+    "Note that public Twitter data sets that you will find will only contain the Tweet IDs (as per Twitter's policy), so you will have to \"rehydrate\" each tweet by using the Twitter API to request the full text. \n",
     "\n",
     "We'll also be using Tweepy - which is a python wrapper that allows us to use the Twitter API. Of course, the Twitter API can be accessed directly as well, but Tweepy has a few extras that makes getting Tweets just a bit easier. \n",
     "\n",
@@ -17,9 +17,7 @@
     "### Resources and Links\n",
     "https://gephi.org/\n",
     "\n",
-    "http://docs.tweepy.org/en/latest/\n",
-    "\n",
-    "Littman, Justin; Wrubel, Laura; Kerchner, Daniel, 2016, \"democratic-party-timelines.txt\", 2016 United States Presidential Election Tweet Ids, https://doi.org/10.7910/DVN/PDI7IN/TXWMVP, Harvard Dataverse, V3\n"
+    "http://docs.tweepy.org/en/latest/\n"
    ]
   },
   {
@@ -35,7 +33,7 @@
     "import tweepy\n",
     "\n",
     "# Save the location of the Tweet JSON file\n",
-    "TWEET_JSON = \"democratic-party-timelines.json\""
+    "TWEET_JSON = \"covid.json\""
    ]
   },
   {
@@ -53,7 +51,8 @@
     "def clean_tweet(tweet): \n",
     "    processed_tweet = {\n",
     "        \"id\" : tweet['id'], \n",
-    "        \"user\" : tweet['user']['screen_name']\n",
+    "        \"user\" : tweet['user']['screen_name'], \n",
+    "        \"created_at\" : tweet['created_at']\n",
     "    }\n",
     "    if \"full_text\" in tweet: \n",
     "        processed_tweet[\"text\"] = tweet['full_text']\n",
@@ -152,8 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "info = {\"consumer_key\": \"\",\n",
-    "        \"consumer_secret\": \"\",\n",
+    "info = {\"api_key\": \"\",\n",
+    "        \"api_secret\": \"\",\n",
     "        \"access_token\": \"\",\n",
     "        \"access_secret\": \"\"}"
    ]
@@ -166,21 +165,21 @@
    "source": [
     "# Let's use the Twitter Search API to look up past tweets\n",
     "# We save our tweets to a file called \"housedemocrats_search.json\"\n",
-    "auth = tweepy.OAuthHandler(info['consumer_key'], info['consumer_secret'])\n",
+    "auth = tweepy.OAuthHandler(info['api_key'], info['api_secret'])\n",
     "auth.set_access_token(info['access_token'], info['access_secret'])\n",
     "\n",
     "api = tweepy.API(auth, wait_on_rate_limit=True, wait_on_rate_limit_notify=True)\n",
     "\n",
     "count = 0\n",
     "for tweet in tweepy.Cursor(api.search,\n",
-    "                           q=\"housedemocrats\",\n",
+    "                           q=\"covid\",\n",
     "                           count=100,\n",
     "                           result_type=\"recent\",\n",
     "                           include_entities=True,\n",
     "                           lang=\"en\").items():\n",
     "    \n",
     "    tweet_json = json.dumps(tweet._json)\n",
-    "    with open (\"housedemocrats_search.json\", \"a+\") as search_f:\n",
+    "    with open (\"covid_search.json\", \"a+\") as search_f:\n",
     "        json_text = json.dumps(tweet._json)\n",
     "        search_f.write(json_text)\n",
     "        search_f.write('\\n')\n",
@@ -196,12 +195,12 @@
    "outputs": [],
    "source": [
     "# Let's use the Twitter Stream API to get tweets in real time\n",
-    "# We save our tweets to a file called \"housedemocrats_stream.json\"\n",
+    "# We save our tweets to a file called \"covid_stream.json\"\n",
     "#override tweepy.StreamListener to add logic to on_status and on_error \n",
     "class MyStreamListener(tweepy.StreamListener):\n",
     "    def on_status(self, status):\n",
     "        print(status._json)\n",
-    "        with open (\"housedemocrats_stream.json\", \"a+\") as stream_f:\n",
+    "        with open (\"covid_stream.json\", \"a+\") as stream_f:\n",
     "            json_text = json.dumps(status._json)\n",
     "            stream_f.write(json_text)\n",
     "            stream_f.write('\\n')\n",
@@ -213,7 +212,7 @@
     "    \n",
     "myStreamListener = MyStreamListener()\n",
     "myStream = tweepy.Stream(auth = api.auth, listener=myStreamListener)\n",
-    "myStream.filter(track=['housedemocrats'])"
+    "myStream.filter(track=['covid'])"
    ]
   },
   {
@@ -224,12 +223,12 @@
    "source": [
     "# load the raw tweets found from the search and stream apis into the same list for processing\n",
     "new_tweet_data = []\n",
-    "with open(\"housedemocrats_search.json\") as new_search_f:\n",
+    "with open(\"covid_search.json\") as new_search_f:\n",
     "    for line in new_search_f:\n",
     "        json_line = json.loads(line)\n",
     "        new_tweet_data.append(json_line)\n",
     "        \n",
-    "with open(\"housedemocrats_stream.json\") as new_stream_f:\n",
+    "with open(\"covid_stream.json\") as new_stream_f:\n",
     "    for line in new_stream_f:\n",
     "        json_line = json.loads(line)\n",
     "        new_tweet_data.append(json_line)\n",
@@ -305,7 +304,7 @@
    "outputs": [],
    "source": [
     "# writing our graph to a Gephi file format\n",
-    "nx.write_gexf(G, \"democratic-party-timelines.gexf\")"
+    "nx.write_gexf(G, \"covid-total.gexf\")"
    ]
   },
   {
