adding cleaning code for stream tweets

--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net.ipynb
@@ -47,9 +47,12 @@
     "    processed_tweet = {\n",
     "        \"id\" : tweet['id'], \n",
     "        \"user\" : tweet['user']['screen_name'], \n",
-    "        \"created_at\" : tweet['created_at']\n",
+    "        \"created_at\" : tweet['created_at'], \n",
+    "        \"text\" : \"\"\n",
     "    }\n",
-    "    if \"full_text\" in tweet: \n",
+    "    if \"extended_tweet\" in tweet: \n",
+    "        processed_tweet[\"text\"] = tweet['extended_tweet']['full_text']\n",
+    "    elif \"full_text\" in tweet: \n",
     "        processed_tweet[\"text\"] = tweet['full_text']\n",
     "    elif \"text\" in tweet: \n",
     "        processed_tweet[\"text\"] = tweet['text']\n",
@@ -58,8 +61,11 @@
     "        rt = tweet['retweeted_status']\n",
     "        processed_tweet[\"is_rt\"] = True\n",
     "        processed_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
-    "        processed_tweet[\"rt_id\"] = rt['id']        \n",
-    "        if \"full_text\" in rt:\n",
+    "        processed_tweet[\"rt_id\"] = rt['id'] \n",
+    "        processed_tweet[\"rt_text\"] = \"\"\n",
+    "        if 'extended_tweet' in rt: \n",
+    "            processed_tweet[\"rt_text\"] = rt['extended_tweet']['full_text']\n",
+    "        elif \"full_text\" in rt:\n",
     "            processed_tweet[\"rt_text\"] = rt['full_text']\n",
     "        elif \"text\" in rt: \n",
     "            processed_tweet[\"rt_text\"] = rt['text']\n",
@@ -67,6 +73,7 @@
     "        processed_tweet[\"is_rt\"] = False\n",
     "            \n",
     "    return processed_tweet\n",
+    "            \n",
     "            \n",
     "# load the raw tweets into a list\n",
     "tweet_data = []\n",
