--- a/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
+++ b/tutorial_twitter_retweet_net/tutorial_twitter_retweet_net_v2.ipynb
@@ -52,9 +52,12 @@
     "    processed_tweet = {\n",
     "        \"id\" : tweet['id'], \n",
     "        \"user\" : tweet['user']['screen_name'], \n",
-    "        \"created_at\" : tweet['created_at']\n",
+    "        \"created_at\" : tweet['created_at'], \n",
+    "        \"text\" : \"\"\n",
     "    }\n",
-    "    if \"full_text\" in tweet: \n",
+    "    if \"extended_tweet\" in tweet: \n",
+    "        processed_tweet[\"text\"] = tweet['extended_tweet']['full_text']\n",
+    "    elif \"full_text\" in tweet: \n",
     "        processed_tweet[\"text\"] = tweet['full_text']\n",
     "    elif \"text\" in tweet: \n",
     "        processed_tweet[\"text\"] = tweet['text']\n",
@@ -63,8 +66,11 @@
     "        rt = tweet['retweeted_status']\n",
     "        processed_tweet[\"is_rt\"] = True\n",
     "        processed_tweet[\"rt_user\"] = rt['user']['screen_name']\n",
-    "        processed_tweet[\"rt_id\"] = rt['id']        \n",
-    "        if \"full_text\" in rt:\n",
+    "        processed_tweet[\"rt_id\"] = rt['id'] \n",
+    "        processed_tweet[\"rt_text\"] = \"\"\n",
+    "        if 'extended_tweet' in rt: \n",
+    "            processed_tweet[\"rt_text\"] = rt['extended_tweet']['full_text']\n",
+    "        elif \"full_text\" in rt:\n",
     "            processed_tweet[\"rt_text\"] = rt['full_text']\n",
     "        elif \"text\" in rt: \n",
     "            processed_tweet[\"rt_text\"] = rt['text']\n",
@@ -164,7 +170,7 @@
    "outputs": [],
    "source": [
     "# Let's use the Twitter Search API to look up past tweets\n",
-    "# We save our tweets to a file called \"housedemocrats_search.json\"\n",
+    "# We save our tweets to a file called \"covid_search.json\"\n",
     "auth = tweepy.OAuthHandler(info['api_key'], info['api_secret'])\n",
     "auth.set_access_token(info['access_token'], info['access_secret'])\n",
     "\n",
@@ -173,9 +179,8 @@
     "count = 0\n",
     "for tweet in tweepy.Cursor(api.search,\n",
     "                           q=\"covid\",\n",
-    "                           count=100,\n",
-    "                           result_type=\"recent\",\n",
     "                           include_entities=True,\n",
+    "                           tweet_mode='extended',\n",
     "                           lang=\"en\").items():\n",
     "    \n",
     "    tweet_json = json.dumps(tweet._json)\n",
